tests/snapshots/shell__unfinished_pipe.snap
---
source: tests/shell.rs
expression: stdout
---
Error: unfinished pipeline
   ╭─[unfinished_pipe.tmp:1:9]
   │
 1 │ echo hi |
   │         ┬  
   │         ╰── error happened here
───╯

